--- a/.github/workflows/terraform-validate.yaml
+++ b/.github/workflows/terraform-validate.yaml
@@ -19,11 +19,11 @@ jobs:
         run: terraform fmt -check --recursive
 
       - name: Terraform Validate Examples
-        working-directory: examples/complete
+        working-directory: examples/basic
         run: |
           terraform init -backend=false
           terraform validate ./
 
       - name: Run Checkov action
         id: checkov
-        uses: bridgecrewio/checkov-action@v12.567.0
+        uses: bridgecrewio/checkov-action@v12.1347.0
